--- a/src/MudBlazor/Components/Table/MudTable.razor
+++ b/src/MudBlazor/Components/Table/MudTable.razor
@@ -5,108 +5,115 @@
 <div @attributes="UserAttributes" class="@Classname" style="@Style">
 @if (Items != null || ServerData != null)
 {
-    <CascadingValue Value="TableContext" IsFixed="true">
-        @if (ToolBarContent != null)
-        {
-            <MudToolBar Class="mud-table-toolbar">
-                @ToolBarContent
-            </MudToolBar>
-        }
-        @if (Context.SortLabels.Any())
-        {
-            <div Class="mud-table-smalldevices-sortselect">
-                <CascadingValue Name="SubscribeToParentForm" Value="false" IsFixed>
-                    <MudSelect Value="@Context.CurrentSortLabel" Label="@SortLabel" ValueChanged="@(v => Context.SetSortFunc(v, override_direction_none: true))" T="MudTableSortLabel<T>">
-                        @foreach (var label in Context.SortLabels)
-                        {
-                            <MudSelectItem Value="@label">@label.ChildContent</MudSelectItem>
-                        }
-                    </MudSelect>
-                </CascadingValue>
-            </div>
-        }
-        <div class="mud-table-container" style="@TableStyle @(GetHorizontalScrollbarStyle())">
-            <table class="mud-table-root">
-                @if (ColGroup != null)
-                {
-                    <colgroup>
-                        @ColGroup
-                    </colgroup>
-                }
-                @if (HeaderContent != null || Columns != null)
-                {
-                    <thead class="@HeadClassname">
-                        @if (CustomHeader)
-                        {
-                            @HeaderContent
-                        }
-                        else
-                        {
-                            <MudTHeadRow IsCheckable="MultiSelection" IsExpandable="@(GroupBy?.Expandable ?? false)">
-                                @if (HeaderContent != null)
-                                {
-                                    @HeaderContent
-                                }
-                                
-                                @if (Columns != null)
-                                {
-                                    <CascadingValue Value="MudBaseColumn.Rendermode.Header" Name="Mode">
-                                        @Columns(Def)
-                                    </CascadingValue>
-                                }
-                            </MudTHeadRow>
-                        }
-                    </thead>
-                }
-                <tbody class="mud-table-body">
-                    @if (Loading)
-                    {
-                        <tr>
-                            <td colspan="1000" class="@(CurrentPageItems.Count() > 0 || LoadingContent != null ? "mud-table-loading" : "")">
-                                <MudProgressLinear Color="@LoadingProgressColor" Class="mud-table-loading-progress" Indeterminate="true" />
-                            </td>
-                        </tr>
-                    }
-                    @if(GroupBy != null)
-                    {
-                        @foreach (var group in GroupItemsPage)
-                        {
-                            <MudTableGroupRow GroupDefinition="GroupBy" Items="group" IsCheckable="MultiSelection" 
-                                              HeaderClass="@GroupHeaderClass" HeaderStyle="@GroupHeaderStyle" 
-                                              FooterClass="@GroupFooterClass" FooterStyle="@GroupFooterStyle"
-                                              HeaderTemplate="@GroupHeaderTemplate" FooterTemplate="@GroupFooterTemplate" T="T"  />
-                        }
-                    }
-                    else
-                    {
-                        @if (CurrentPageItems != null && CurrentPageItems.Count() > 0)
-                        {
-                            var rowIndex = 0;
-                            <MudVirtualize IsEnabled="@Virtualize" OverscanCount="@OverscanCount" Items="@CurrentPageItems?.ToList()" Context="item">
-                               @{ var rowClass = new CssBuilder(RowClass).AddClass(RowClassFunc?.Invoke(item, rowIndex)).Build(); }
-                               @{ var rowStyle = new StyleBuilder().AddStyle(RowStyle).AddStyle(RowStyleFunc?.Invoke(item, rowIndex)).Build(); }
-                               <MudTr Class="@rowClass" Style="@rowStyle" Item="item" @key="item" IsCheckable="MultiSelection" IsEditable="IsEditable"
-                                      IsChecked="@(Context.Selection.Contains(item))"
-                                      IsCheckedChanged="((value) => { var x = item; OnRowCheckboxChanged(value, x); })">
+	<CascadingValue Value="TableContext" IsFixed="true">
+		@if (ToolBarContent != null)
+		{
+			<MudToolBar Class="mud-table-toolbar">
+				@ToolBarContent
+			</MudToolBar>
+		}
+		@if (Context.SortLabels.Any())
+		{
+			<div Class="mud-table-smalldevices-sortselect">
+				<CascadingValue Name="SubscribeToParentForm" Value="false" IsFixed>
+					<MudSelect Value="@Context.CurrentSortLabel" Label="@SortLabel" ValueChanged="@(v => Context.SetSortFunc(v, override_direction_none: true))" T="MudTableSortLabel<T>">
+						@foreach (var label in Context.SortLabels)
+						{
+							<MudSelectItem Value="@label">@label.ChildContent</MudSelectItem>
+						}
+					</MudSelect>
+				</CascadingValue>
+			</div>
+		}
+		@if (PagerContent != null && (PagerPosition == TablePagerPosition.Top || PagerPosition == TablePagerPosition.TopAndBottom))
+		{
+			<div class="mud-table-pagination">
+				@PagerContent
+			</div>
+		}
 
-                                   @if ((!ReadOnly) && IsEditable && object.Equals(_editingItem, item))
-                                   {
-                                        <CascadingValue Value="@Validator" IsFixed="true">
-                                           @if(RowEditingTemplate != null)
-										    {
-											    @RowEditingTemplate(item)
-										    }
-										    @if (Columns != null)
-										    {
-											    <CascadingValue Value="MudBaseColumn.Rendermode.Edit" Name="Mode">
-												    @Columns(item)
-											    </CascadingValue>
-										    }
-                                        </CascadingValue>
-                                   }
-                                   else
-                                   {
-                                       if (RowTemplate != null)
+		<div class="mud-table-container" style="@TableStyle @(GetHorizontalScrollbarStyle())">
+			<table class="mud-table-root">
+				@if (ColGroup != null)
+				{
+					<colgroup>
+						@ColGroup
+					</colgroup>
+				}
+				@if (HeaderContent != null || Columns != null)
+				{
+					<thead class="@HeadClassname">
+						@if (CustomHeader)
+						{
+							@HeaderContent
+						}
+						else
+						{
+							<MudTHeadRow IsCheckable="MultiSelection" IsExpandable="@(GroupBy?.Expandable ?? false)">
+								@if (HeaderContent != null)
+								{
+									@HeaderContent
+								}
+								
+								@if (Columns != null)
+								{
+									<CascadingValue Value="MudBaseColumn.Rendermode.Header" Name="Mode">
+										@Columns(Def)
+									</CascadingValue>
+								}
+							</MudTHeadRow>
+						}
+					</thead>
+				}
+				<tbody class="mud-table-body">
+					@if (Loading)
+					{
+						<tr>
+							<td colspan="1000" class="@(CurrentPageItems.Count() > 0 || LoadingContent != null ? "mud-table-loading" : "")">
+								<MudProgressLinear Color="@LoadingProgressColor" Class="mud-table-loading-progress" Indeterminate="true" />
+							</td>
+						</tr>
+					}
+					@if(GroupBy != null)
+					{
+						@foreach (var group in GroupItemsPage)
+						{
+							<MudTableGroupRow GroupDefinition="GroupBy" Items="group" IsCheckable="MultiSelection" 
+											  HeaderClass="@GroupHeaderClass" HeaderStyle="@GroupHeaderStyle" 
+											  FooterClass="@GroupFooterClass" FooterStyle="@GroupFooterStyle"
+											  HeaderTemplate="@GroupHeaderTemplate" FooterTemplate="@GroupFooterTemplate" T="T"  />
+						}
+					}
+					else
+					{
+						@if (CurrentPageItems != null && CurrentPageItems.Count() > 0)
+						{
+							var rowIndex = 0;
+							<MudVirtualize IsEnabled="@Virtualize" OverscanCount="@OverscanCount" Items="@CurrentPageItems?.ToList()" Context="item">
+							   @{ var rowClass = new CssBuilder(RowClass).AddClass(RowClassFunc?.Invoke(item, rowIndex)).Build(); }
+							   @{ var rowStyle = new StyleBuilder().AddStyle(RowStyle).AddStyle(RowStyleFunc?.Invoke(item, rowIndex)).Build(); }
+							   <MudTr Class="@rowClass" Style="@rowStyle" Item="item" @key="item" IsCheckable="MultiSelection" IsEditable="IsEditable"
+									  IsChecked="@(Context.Selection.Contains(item))"
+									  IsCheckedChanged="((value) => { var x = item; OnRowCheckboxChanged(value, x); })">
+
+								   @if ((!ReadOnly) && IsEditable && object.Equals(_editingItem, item))
+								   {
+										<CascadingValue Value="@Validator" IsFixed="true">
+										   @if(RowEditingTemplate != null)
+											{
+												@RowEditingTemplate(item)
+											}
+											@if (Columns != null)
+											{
+												<CascadingValue Value="MudBaseColumn.Rendermode.Edit" Name="Mode">
+													@Columns(item)
+												</CascadingValue>
+											}
+										</CascadingValue>
+								   }
+								   else
+								   {
+									   if (RowTemplate != null)
 										{
 											@RowTemplate(item)
 										}
@@ -116,97 +123,98 @@
 												@Columns(item)
 											</CascadingValue>
 										}
-                                   }
-                               </MudTr>
-                               @if (ChildRowContent != null)
-                               {
-                                   @ChildRowContent(item)
-                               }   
-                               @{ rowIndex++; }
-                            </MudVirtualize>
-                        }
-                    }
-                    @if(!(CurrentPageItems != null && CurrentPageItems.Count() > 0)
-                        && (Loading ? LoadingContent != null : NoRecordsContent != null)
-                    )
-                    {
-                        <tr>
-                            <th colspan="1000" class="mud-table-empty-row">
-                                <div Class="my-3">
-                                    @if(Loading)
-                                    {
-                                        @LoadingContent
-                                    }
-                                    else
-                                    {
-                                        @NoRecordsContent
-                                    }
-                                </div>
-                            </th>
-                        </tr>
-                    }
-                </tbody>
-                @if (FooterContent != null || Columns != null)
-                {
-                    <tfoot class="@FootClassname">
-                        @if (CustomFooter)
-                        {
-                            @FooterContent
-                        }
-                        else
-                        {
-                            <MudTFootRow IsCheckable="MultiSelection" IsExpandable="@(GroupBy?.Expandable ?? false)">
-                                @if (@FooterContent != null)
-                                {
-                                    @FooterContent
-                                }
-                                @if (Columns != null)
-                                {
-                                    <CascadingValue Value="MudBaseColumn.Rendermode.Footer" Name="Mode">
-                                        @Columns(Def)
-                                    </CascadingValue>
-                                }
-                            </MudTFootRow>
-                        }
-                    </tfoot>
-                }
-            </table>
-        </div>
-        @if (PagerContent != null)
-        {
-            <div class="mud-table-pagination">
-                @PagerContent
-            </div>
-        }
-    </CascadingValue>
+								   }
+							   </MudTr>
+							   @if (ChildRowContent != null)
+							   {
+								   @ChildRowContent(item)
+							   }   
+							   @{ rowIndex++; }
+							</MudVirtualize>
+						}
+					}
+					@if(!(CurrentPageItems != null && CurrentPageItems.Count() > 0)
+						&& (Loading ? LoadingContent != null : NoRecordsContent != null)
+					)
+					{
+						<tr>
+							<th colspan="1000" class="mud-table-empty-row">
+								<div Class="my-3">
+									@if(Loading)
+									{
+										@LoadingContent
+									}
+									else
+									{
+										@NoRecordsContent
+									}
+								</div>
+							</th>
+						</tr>
+					}
+				</tbody>
+				@if (FooterContent != null || Columns != null)
+				{
+					<tfoot class="@FootClassname">
+						@if (CustomFooter)
+						{
+							@FooterContent
+						}
+						else
+						{
+							<MudTFootRow IsCheckable="MultiSelection" IsExpandable="@(GroupBy?.Expandable ?? false)">
+								@if (@FooterContent != null)
+								{
+									@FooterContent
+								}
+								@if (Columns != null)
+								{
+									<CascadingValue Value="MudBaseColumn.Rendermode.Footer" Name="Mode">
+										@Columns(Def)
+									</CascadingValue>
+								}
+							</MudTFootRow>
+						}
+					</tfoot>
+				}
+			</table>
+		</div>
+		
+		@if (PagerContent != null && (PagerPosition == TablePagerPosition.Bottom || PagerPosition == TablePagerPosition.TopAndBottom))
+		{
+			<div class="mud-table-pagination">
+				@PagerContent
+			</div>
+		}
+	</CascadingValue>
 }
 </div>
 @code
 {
-    // moved to code to avoid repeatedly code on markup block
-    internal RenderFragment RenderRows(IEnumerable<T> source, string customClass = null, bool isExpandable = false)
-    {
-        var rowIndex = 0;
+	// moved to code to avoid repeatedly code on markup block
+	internal RenderFragment RenderRows(IEnumerable<T> source, string customClass = null, bool isExpandable = false)
+	{
+		var rowIndex = 0;
 
-         RenderFragment rootNode =
-            @<text>
-                <MudVirtualize IsEnabled="@Virtualize" Items="@source?.ToList()" Context="item" ChildContent="@child()">              
-                </MudVirtualize>
-            </text>;
+		 RenderFragment rootNode =
+			@<text>
+				<MudVirtualize IsEnabled="@Virtualize" Items="@source?.ToList()" Context="item" ChildContent="@child()">              
+				</MudVirtualize>
+			</text>;
 
-         RenderFragment<T> child() => item =>
-             @<text>
-             @{
-                var rowClass = new CssBuilder(RowClass).AddClass(RowClassFunc?.Invoke(item, rowIndex)).AddClass(customClass, ! string.IsNullOrEmpty("mud-table-row-group-indented-1")).Build();
-                var rowStyle = new StyleBuilder().AddStyle(RowStyle).AddStyle(RowStyleFunc?.Invoke(item, rowIndex)).Build();
-             } 
-             <MudTr Class="@rowClass" Style="@rowStyle" Item="item" @key="item" IsCheckable="MultiSelection" IsEditable="IsEditable" IsExpandable="isExpandable"
-                        IsChecked="Context.Selection.Contains(item)" IsCheckedChanged="((value) => { var x = item; OnRowCheckboxChanged(value, x); })">
+		 RenderFragment<T> child() => item =>
+			 @<text>
+			 @{
+				var rowClass = new CssBuilder(RowClass).AddClass(RowClassFunc?.Invoke(item, rowIndex)).AddClass(customClass, ! string.IsNullOrEmpty("mud-table-row-group-indented-1")).Build();
+				var rowStyle = new StyleBuilder().AddStyle(RowStyle).AddStyle(RowStyleFunc?.Invoke(item, rowIndex)).Build();
+			 } 
+			 <MudTr Class="@rowClass" Style="@rowStyle" Item="item" @key="item" IsCheckable="MultiSelection" IsEditable="IsEditable" IsExpandable="isExpandable"
+						IsChecked="Context.Selection.Contains(item)" IsCheckedChanged="((value) => { var x = item; OnRowCheckboxChanged(value, x); })">
 
-                    @if ((!ReadOnly) && IsEditable && object.Equals(_editingItem, item))
-                    {
-                        <CascadingValue Value="@Validator" IsFixed="true">
-                            @if(RowEditingTemplate != null)
+					@if ((!ReadOnly) && IsEditable && object.Equals(_editingItem, item))
+					{
+						<CascadingValue Value="@Validator" IsFixed="true">
+							@if(RowEditingTemplate != null)
 							{
 								@RowEditingTemplate(item)
 							}
@@ -216,11 +224,11 @@
 									@Columns(item)
 								</CascadingValue>
 							}
-                        </CascadingValue>
-                    }
-                    else
-                    {
-                        if (RowTemplate != null)
+						</CascadingValue>
+					}
+					else
+					{
+						if (RowTemplate != null)
 						{
 							@RowTemplate(item)
 						}
@@ -230,17 +238,17 @@
 								@Columns(item)
 							</CascadingValue>
 						}
-                    }
-                </MudTr>
-                @if (ChildRowContent != null)
-                {
-                    @ChildRowContent(item)
-                }
-                @{rowIndex++;}
-        </text>
-    ;
+					}
+				</MudTr>
+				@if (ChildRowContent != null)
+				{
+					@ChildRowContent(item)
+				}
+				@{rowIndex++;}
+		</text>
+	;
 
 
-        return rootNode;
-    }
+		return rootNode;
+	}
 }
