--- a/src/MudBlazor.Docs/Pages/Components/Table/Examples/TabPagerExample.razor
+++ b/src/MudBlazor.Docs/Pages/Components/Table/Examples/TabPagerExample.razor
@@ -3,7 +3,7 @@
 @namespace MudBlazor.Docs.Examples
 @inject HttpClient httpClient
 
-<MudTable Items="@Elements">
+<MudTable Items="@Elements" PagerPosition=TablePagerPosition.TopAndBottom>
     <ToolBarContent>
         <MudText Typo="Typo.h6">Periodic Elements</MudText>
     </ToolBarContent>
