--- a/src/MudBlazor.Docs/Pages/Components/Tabs/TabsPage.razor
+++ b/src/MudBlazor.Docs/Pages/Components/Tabs/TabsPage.razor
@@ -5,6 +5,15 @@
     <DocsPageContent>
 
         <DocsPageSection>
+            <SectionHeader Title="No Initially Active Tab">
+                <Description></Description>
+            </SectionHeader>
+            <SectionContent Code="NoActiveTabExample" ShowCode="false" Block="true">
+                <NoActiveTabExample />
+            </SectionContent>
+        </DocsPageSection>
+
+        <DocsPageSection>
             <SectionHeader Title="Simple Tab">
                 <Description></Description>
             </SectionHeader>
