docs example added

--- a/src/MudBlazor.Docs/Pages/Components/Tabs/TabsPage.razor
+++ b/src/MudBlazor.Docs/Pages/Components/Tabs/TabsPage.razor
@@ -5,6 +5,15 @@
 	<DocsPageContent>
 
 		<DocsPageSection>
+			<SectionHeader Title="Override default tab header tooltip position">
+				<Description></Description>
+			</SectionHeader>
+			<SectionContent Code="OverridenTooltipPlacementExample" ShowCode="false" Block="true">
+				<OverridenTooltipPlacementExample />
+			</SectionContent>
+		</DocsPageSection>
+
+		<DocsPageSection>
 			<SectionHeader Title="Active Tab Toggling">
 				<Description></Description>
 			</SectionHeader>
