--- a/src/MudBlazor.Docs/Pages/Components/Table/TablePage.razor
+++ b/src/MudBlazor.Docs/Pages/Components/Table/TablePage.razor
@@ -63,6 +63,14 @@
         </DocsPageSection>
 
         <DocsPageSection>
+            <SectionHeader Title="TablePager hidden when total items count < items per page">
+            </SectionHeader>
+            <SectionContent DarkenBackground="true" ShowCode="false" Block="true" FullWidth="true">
+                <TabPagerExampleHiddenWhenSinglePage />
+            </SectionContent>
+        </DocsPageSection>
+
+        <DocsPageSection>
             <SectionHeader Title="Sorting">
                 <Description>
                     To enable sorting, add <CodeInline>&lt;MudTableSortLabel></CodeInline> to the header cells and define a function that simply returns the value which should be sorted by when sorting by the specific column.
