--- a/src/MudBlazor.Docs/Pages/Components/TreeView/TreeViewPage.razor
+++ b/src/MudBlazor.Docs/Pages/Components/TreeView/TreeViewPage.razor
@@ -16,6 +16,15 @@
         </DocsPageSection>
 
         <DocsPageSection>
+            <SectionHeader Title="Filtered Items">
+                <Description></Description>
+            </SectionHeader>
+            <SectionContent Code="TreeViewItemsFilterExample" ShowCode="false">
+                <TreeViewItemsFilterExample />
+            </SectionContent>
+        </DocsPageSection>
+
+        <DocsPageSection>
             <SectionHeader Title="Hoverable">
                 <Description></Description>
             </SectionHeader>
