--- a/src/MudBlazor/Components/TreeViewEx/MudTreeViewEx.razor
+++ b/src/MudBlazor/Components/TreeViewEx/MudTreeViewEx.razor
@@ -4,18 +4,18 @@
 
 <ul @attributes="UserAttributes" class="@Classname" style="@Stylename">
 	<CascadingValue Value="@MudTreeRoot" IsFixed="true">
-		@if (ItemTemplate != null && _filteredItems != null)
+		@if (ItemTemplate != null && FilteredItems != null)
 		{
 			@if (VisibleItemsLimit > 0)
 			{
 				foreach (var item in GetTrimmedItems())
 					@ItemTemplate(item)
 
-				@if (_filteredItems.Count > _currentVisibleItemsLimit)
+				@if (FilteredItems.Count > _currentVisibleItemsLimit)
 				{
 					<li>
 						<div class="mud-treeview-item-content gap-2 justify-end">
-							@String.Format(MudTreeRoot.VisibleItemsExtendText, _filteredItems.Count - _currentVisibleItemsLimit)
+							@String.Format(MudTreeRoot.VisibleItemsExtendText, FilteredItems.Count - _currentVisibleItemsLimit)
 							<MudIconButton Variant=Variant.Filled OnClick=IncrementVisibleItemsLimit Icon=@Icons.Material.Filled.MoreHoriz />
 
 							@if (MudTreeRoot.EnableShowAllItemsButton)
@@ -28,7 +28,7 @@
 			}
 			else
 			{
-				foreach (var item in _filteredItems)
+				foreach (var item in FilteredItems)
 					@ItemTemplate(item)
 			}
 		}
@@ -49,13 +49,13 @@
 
 	private void ShowAllItems()
 	{
-		_currentVisibleItemsLimit = this._filteredItems.Count;
+		_currentVisibleItemsLimit = this.FilteredItems.Count;
 	}
 
 	private IEnumerable<T> GetTrimmedItems()
 	{
 		_currentVisibleItemsLimit ??= VisibleItemsLimit;
 
-		return _filteredItems.Take(_currentVisibleItemsLimit.Value);
+		return FilteredItems.Take(_currentVisibleItemsLimit.Value);
 	}
 }
