example in the docs added

--- a/src/MudBlazor.Docs/Pages/Components/Select/SelectPage.razor
+++ b/src/MudBlazor.Docs/Pages/Components/Select/SelectPage.razor
@@ -147,6 +147,13 @@
         </DocsPageSection>
 
         <DocsPageSection>
+            <SectionHeader Title="Render value using ToStringFunc" />
+            <SectionContent ShowCode="false">
+                <SelectAlwaysRenderValueAsStringExample />
+            </SectionContent>
+        </DocsPageSection>
+
+        <DocsPageSection>
             <SectionHeader Title="Keyboard Navigation">
                 <Description>
                     <MudText>MudSelect accepts keys to keyboard navigation.</MudText>
